--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".leetcode",
+  "name": "leetcode-practice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
     "jest": "^27.5.1"
   }
 }
